aggiunte di operazioni CRUD aggiuntive per user e endpoint per lo UserController. passaggio da database mySQL a SQLite.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=BookHub-API
+# Configurazione SQLite
+spring.datasource.driver-class-name=org.sqlite.JDBC
+spring.datasource.url=jdbc:sqlite:${DB_PATH:./src/main/resources/database.db}
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.community.dialect.SQLiteDialect
+spring.flyway.enabled=false
